funcionalidades secundarias + diseño y correcion de errores de interfaz

--- a/Sistema de Gestión de Museo Pictórico/Formularios/FormMain.resx
+++ b/Sistema de Gestión de Museo Pictórico/Formularios/FormMain.resx
@@ -175,4 +175,80 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>93</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAMMOAADDDgAAAAAAAAAA
+        AAABAADvAAAA/wAAAP4AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP4AAAD/AQAA7wAAAP05P1j9U16B/05Ze/9PWn3/T1p9/09ZfP9PWHr/UFl7/FBZe/xQWXv8UFl7/E9Z
+        e/xPWHr/T1p8/09aff9PWn3/T1p8/09Yev9PWXv8UFl7/FBZe/xQWXv8UFl7/E9Yev9PWXz/T1p9/09a
+        ff9OWXv/U16B/zk/WP0AAAD9AAAA4SAjMf86QFj+NDJC/zUzQ/81MkL/NjdK/zc9Vf80OlD/NDpQ/zQ6
+        UP80OlD/NTtR/zc9VP81NEb/NTJD/zUyQ/81NEb/Nz1U/zU7Uf80OlD/NDpQ/zQ6UP80OlD/Nz1V/zY3
+        Sv81MkL/NTND/zQyQv86QFj+ICMx/wAAAOABAgMyAAAAxwAGCv8EK0j+Bi1J/wYvTv4CGiv/AAAA8wAB
+        Ab0AAAC9AAAAvgAAALsAAADHAAAA/QMkPP8GLkz/Bi5M/wMkPP8AAAD9AAAAxwAAALsAAAC+AAAAvQAB
+        Ab0AAADzAhor/wYvTv4GLUn/BCtI/gAGCv8AAADHAQIDMgEAAAABAABeBQwT/wo9ZvsDMln/Bjtl/Qoo
+        Qv8CAADYPf//AQIAAAADAgIDAgAAAAEAACcDAwT+CzVY/wQ2Xv4ENl7+CzVY/wMDBP4BAAAnAgAAAAMC
+        AgMCAAAAPf//AQIAANgKKEL/Bjtl/QMzWf8KPWb7BQwT/wEAAF4BAAAAAQAAAAgHCCcAAADrHyIl/0ZN
+        VP47QUf8BQUF/wAAAI0AAAAAAQAABAEAAAMAAAABHB4hBwAAAMEQERP/QklQ/UJJUP0QERP/AAAAwR0e
+        IQcAAAABAQAAAwEAAAQAAAAAAAAAjQUFBf87QUf8Rk1U/h8iJf8AAADrCAcIJwEAAAABAgMCAAAAAAAA
+        AL5Yb3r/zf///KzZ7P0NERP/AAAAQgAAAAABAAADAQAAAAEAAAQAAAAAAAAAfy46P//D9//7w/f/+y46
+        P/8AAAB/AAAAAAEAAAQBAAAAAQAAAwAAAAAAAABCDRET/6zZ7P3N///8WG96/wAAAL4AAAAAAQIDAgEA
+        AAIAAAAAAAAAv1Fldv+97f/8nsbo/QwOEP8AAABEAAAAAAEAAAMBAAAAAQAABAAAAAAAAACBKjQ8/7Ti
+        //u04v/7KjQ8/wAAAIEAAAAAAQAABAEAAAABAAADAAAAAAAAAEQMDhD/nsbo/b3t//xRZXb/AAAAvwAA
+        AAABAAACAQAAAgAAAAAAAAC+Umd4/8Dx//yhyev9DA4R/wAAAEIAAAAAAQAAAwAAAAABAAAEAAAAAAAA
+        AIArND3/t+X/+7fl//srND3/AAAAfwAAAAABAAAEAQAAAAEAAAMAAAAAAAAAQgwOEf+hyev9wPH//FJm
+        eP8AAAC+AAAAAAEAAAIBAAACAAAAAAAAAL5SZnf/v/D//KDI6v0MDhH/AAAAQgAAAAABAAADAQAAAAEA
+        AAQAAAAAAAAAgCo0Pf+25P/7tuT/+yo0Pf8AAACAAAAAAAEAAAQBAAAAAQAAAwAAAAAAAABCDA4R/6DI
+        6v2/8P/8UmZ3/wAAAL4AAAAAAQAAAgEAAAIAAAAAAAAAvlRoeP/D9f/8pM3r/Q0PEf8AAABCAAAAAAEA
+        AAMBAAAAAQAABAAAAAAAAACAKzU9/7rp//u66f/7KzU9/wAAAIAAAAAAAQAABAEAAAABAAADAAAAAAAA
+        AEINDxH/pM3s/cP1//xUaHj/AAAAvgAAAAABAAACAQAAAgAAAAAAAADBTWBw/7Pg//yWvNz9DA0Q/wAA
+        AEYAAAAAAQAABQEAAAIBAAAGAAAAAAAAAIQoMTn/qtX6+6rV+vsoMTn/AAAAhAAAAAABAAAGAQAAAgEA
+        AAUAAAAAAAAARgwNEP+WvNz9s+D//E1gcP8AAADBAAAAAAEAAAIBAAAAAgEBSgAAAP8HBwj+Dg8S/wwN
+        D/0CAQH/AQAAvwAAAAABAAABAQAAAgEAAAADAgIZAQAA6wQEBP8NDxH+DQ8R/gQEBP8BAADrAwICGQEA
+        AAABAAACAQAAAQAAAAABAAC/AgEB/wwND/0ODxL/BwcI/gAAAP8CAQFKAQAAAAAAAAAAAABfAw0W/xFa
+        k/sPVY3/EV6a/Qs3Wf8AAADeAggOKAAAACcAAAAqAAECIAAAAEkAAAH+D0x7/xBZk/8QWZP/D0x7/wAA
+        Af4AAABJAAECIAAAACoAAAAnAggOKAAAAN4LN1n/EV6a/Q9Vjf8RWpP7Aw0W/wAAAF8AAAAAAQABIQEA
+        ANMGBwr/CRAZ/QkQGf8JERr/CAwT/wcGCf4HBwr+BwcK/gcHCv4HBwr+BwcK/gcHCv4JDhb/CREZ/wkR
+        Gf8JDhb/BwcK/gcHCv4HBwr+BwcK/gcHCv4HBwr+BwYJ/ggME/8JERr/CRAZ/wkQGf4GBwr/AQAA2AEA
+        ACgAAADFDA0S/zg+U/04PVD/OD1R/zg9Uf84PlL/OD9V/zg/Vf84P1X/OD9V/zg/Vf84P1X/OD9V/zg9
+        Uv84PVH/OD1R/zg9Uv84P1X/OD9V/zg/Vf84P1X/OD9V/zg/Vf84P1X/OD5S/zg9Uf84PVH/NzxQ/zk/
+        Vf0ODxX/AAAAzQEAAO8BAAD/CQgX/QcHFP8FBA3/BgUP/wYFDv8GBQ7/BQQO/gYFEP4GBRD+BgUQ/gYF
+        EP8GBRD/BgYR/wcGEf8HBhH/BgYR/wYFEP8GBRD/BgUQ/gYFEP4GBRD+BQQO/gYFDv8GBQ7/BgUP/wUE
+        Df8HBxT/CQgX/QEAAP8BAADwBQQMNwAAAOcbGkn/V1f2/FlZ+/9ZWf3/WVn8/1hY9/9aWvz/VFTt/1RU
+        7v9UVO7/VFTt/1NT6v9UVO3/VFTu/1RU7v9UVO3/U1Pq/1RU7f9UVO7/VFTu/1RU7f9aWvz/WFj3/1lZ
+        /P9ZWf3/WVn7/1dX9vwbGkr/AAAA6AUECzcAAAAAAgEELgAAAOkTEzT/Hh1S/BIRMf8iIl//Pz+x/yYm
+        a/9fX///W1v+/1tb//9cXP//YWH//1xc//9bW///W1v//1xc//9hYf//XFz//1tb//9bW/7/X1///yYm
+        a/8/P7H/IiJf/xIRMf8eHVL8ExM1/wAAAOkCAQQuAAAAAAEAAQQCAQQABQQLKgAAAOQCAgT/IyJh/DMz
+        kP9FRcP/NDST/1xc//9ZWfz/Wlv//1ZW8/82Npn/Vlbz/1pa//9aWv//Vlbz/zY2mf9WVvP/Wlr//1lZ
+        /P9cXP//NDST/0VFw/8zM5D/IyJh/AICBP8AAADkBQQLKgIBBAABAAEEAQAAAAIBAwQCAQQACwobJQAA
+        AOAgIFv/YmL//F9f//9fX/7/Wlr//1lZ/f9dXf//TEzY/wEBAv9MTNb/XV3//11d//9MTNb/AQEC/0xM
+        1/9dXf//WVn9/1pa//9fX/7/X1///2Ji//wgIFz/AAAA4AoKGyYCAQQAAgEDBAEAAAABAAAAAQAAAAEA
+        AAQAAAAABwYRIQAAANwWFj7/Wlr3+1tb/v9ZWfz/WVn9/11d//9MTNf/AgEE/05N1/9eXv//Xl7//05N
+        1/8CAQT/TEzX/11d//9ZWf3/WVn9/1tb/v9aWvj7FhY//wAAANwHBhEhAAAAAAEAAAQBAAAAAQAAAAEA
+        AAABAAAAAQAAAAIBAwMGBQ4ADg0lHQAAANcVFTz/WVn1+1xc//9YWPr/Xl7//0xM1v8CAQL/Tk3V/xoZ
+        SP8aGUf/Tk3V/wIBAv9MTNb/Xl7//1hY+v9cXP//WVn1+xUVPP8AAADYDg0kHQYFDQACAQMDAQAAAAEA
+        AAABAAAAAAAAAAEAAAABAAAAAQAAAAIBBAMIBxMAEA4oGQAAANMTEzb/WFjy+1xc/v9cXP//TEzW/wYF
+        D/8ODib/DAsg/wwLIP8ODSb/BgUP/0xM1v9cXP//XFz+/1hY8vsTEzf/AAAA0w8OKBkIBhIAAgEEAwEA
+        AAABAAAAAQAAAAAAAAAAAAAAAAAAAAEAAAABAAAAAQAAAAICBAMLCRkAEhAuFQAAAM4RETH/Vlbs+2Bg
+        //9LS9b/AAAA/woJG/9TU+T/U1Pk/woJG/8AAAD/S0vW/2Bg//9WVu37EhEx/wAAAM4SEC4WCgkYAAIC
+        BAMBAAAAAQAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAABAAAAAQAAAAMCBQMPDSQAFBM1EgAA
+        AMkPDyv/V1fw+1dX7/8dHVP/Tk7X/15e//9eXv//Tk7Y/x0dU/9XV+//V1fw+w8PLP8AAADJFBI0Eg8M
+        IwADAgUDAQAAAAEAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAABAAAAAQAAAAMC
+        BQMXFDcAGBY+DwAAAMQODSj/VVXn+2Nk//9aWvv/WFj7/1hY+/9aWvv/Y2T//1VV5/sODSj/AAAAxBgW
+        Pg8WEzYAAwIFAwEAAAABAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEA
+        AAABAAAAAQAAAAMCBgItJ24AHBpJCwAAAL4MDCP/UVHh+V9f//5eXv3/Xl79/19f//5RUeH5DQwj/wAA
+        AL8cGUgMKyVoAAMCBgIBAAAAAQAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAEAAAABAAAAAQAAAAMCBgL///8AHRpKCQAAALkJCRn/GhlH/BIQOP8SEDj/GhlH/AkJ
+        Gf8AAAC5HRpJCf///wADAgYCAQAAAAEAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAABAAAAAQAAAAMCBgIhHlYADAodDQMDBXYAAADsIycx/yMn
+        Mf8AAADsAwMFdgwKHQ0hHVMAAwIGAgEAAAABAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAABAAAAAQAAAAEAAQIBAAADAAAAAAAA
+        AMguM0j/LjNI/wAAAMgAAAAAAQAAAwEAAQIBAAAAAQAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAABAAAAAQAAAAEA
+        AAMCAAAAAQAATQAAAPUAAAD1AQAATQIAAAABAAADAQAAAAEAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIBQCgGAgAEBQIgRAkCIEQJAqBUCQIgRAkCI
+        EQJAiBECgJAJAYAAAAEAAAAAAAAAAAAAAAAAAAAAgAAAAUAAAAKgAAAFUAAACqgAABXUAAAr6gAAV/UA
+        AK/6gAFf/UACv/6gBX//UAr//6Ql///UK/8=
+</value>
+  </data>
 </root>
