--- a/Sistema de Gestión de Museo Pictórico/ControlesDeUsuario/ucReservaVisitaGuiada.resx
+++ b/Sistema de Gestión de Museo Pictórico/ControlesDeUsuario/ucReservaVisitaGuiada.resx
@@ -126,6 +126,9 @@
   <metadata name="bindingSourceExpoPorSede.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>687, 17</value>
   </metadata>
+  <metadata name="empleadoBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>889, 17</value>
+  </metadata>
   <metadata name="exposicionBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>344, 17</value>
   </metadata>
